Update mina signer build

--- a/packages/mina-signer/package.json
+++ b/packages/mina-signer/package.json
@@ -5,23 +5,24 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf dist/*",
-    "build": "webpack -p --mode production",
+    "build": "webpack --mode production",
     "build-dev": "webpack -d --mode development"
   },
   "dependencies": {
-    "mina-signer": "3.0.0",
     "@babel/polyfill": "^7.8.3",
     "bignumber.js": "^9.0.1",
     "bip32": "^2.0.6",
     "bip39": "^3.0.3",
     "bn.js": "^5.1.1",
     "bs58check": "^2.1.2",
+    "libsodium-wrappers": "^0.7.9",
+    "mina-signer": "3.0.0",
     "randombytes": "^2.1.0",
-    "safe-buffer": "^5.2.1",
-    "libsodium-wrappers": "^0.7.9"
+    "safe-buffer": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.8.3",
     "@webpack-cli/info": "^0.2.0",
     "@webpack-cli/init": "^0.3.0",
@@ -30,8 +31,7 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1",
-    "webpack": "^5.90.2",
-    "webpack-cli": "^5.1.4",
-    "typescript": "^5.3.3"
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   }
 }
