--- a/packages/mina-signer/package.json
+++ b/packages/mina-signer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mina-signer",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,8 @@
     "libsodium-wrappers": "^0.7.9",
     "mina-signer": "3.0.7",
     "randombytes": "^2.1.0",
-    "safe-buffer": "^5.2.1"
+    "safe-buffer": "^5.2.1",
+    "node-forge":"1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
